--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <h1 id="t02"> HELLO, WELCOME TO MY PAGE</h1>
     
     
-        <img src="images/mountain.png" alt="mountain" id="t01">
+        <img src="mountain.png" alt="mountain" id="t01">
 
        </div>
        <h2 style="text-align: center; font-family: 'Dancing Script', cursive; font-size: 72px; color: steelblue;" id="t10">Web Developer<br> and <br>Video Editor</h2>
-       <img src="images/fox.png" style="width: 200px; margin-left: 390px; margin-top: 70px;">
+       <img src="fox.png" style="width: 200px; margin-left: 390px; margin-top: 70px;">
        <h2 style="margin-left: 460px; color: rgb(247, 2, 63);">Hello,</h2>
        <p>My name is Sadik.I live in Faripdur,Bangladesh.My School name is Faridpur Zilla School.
            My roll no. is 02.
